--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -9,6 +9,10 @@
     margin-bottom: 2px;
     border-radius: 30px 0 0 0;
 
+    .right-now-tab{
+        display: none;
+    }
+
     &__item{
         position: relative;
         border: none;
@@ -28,7 +32,7 @@
             transition: all .1s;
         }        
         
-        &:first-child{
+        &:nth-child(2){
             border-right: 1px solid black;
         }
 
